--- a/pages/home/home.wxml
+++ b/pages/home/home.wxml
@@ -28,7 +28,20 @@
 </view>
 
  <!-- 游戏资讯 -->
-<view class="RecommendPage" wx:if="{{HomePage==0}}">这是推荐页面</view>
+<view class="RecommendPage" wx:if="{{HomePage==0}}"> 
+  <view class="allRecommend">
+    <view class="PUBG"><image class="pubgLog" src="../../gameImages/1.png"></image><view class="pubgText">绝地求生</view></view>
+    <view class="LOL"><image class="lolLog" src="../../gameImages/2.png"></image><view class="lolText">英雄联盟</view></view>
+    <view class="DOTA2"><image class="dota2Log" src="../../gameImages/3.png"></image><view class="dota2Text">DOTA2</view></view>
+    <view class="cai6"><image class="cai6Log" src="../../gameImages/4.png"></image><view class="cai6Text">彩虹六号</view></view>
+    <view class="GTA5"><image class="GTA5Log" src="../../gameImages/5.png"></image><view class="GTA5Text">GTA 5</view></view>
+    <view class="CSGO"><image class="CSGOLog" src="../../gameImages/6.png"></image><view class="CSGOText">CS:GO</view></view>
+    <view class="Apex"><image class="ApexLog" src="../../gameImages/7.png"></image><view class="ApexText">Apex英雄</view></view>
+    <view class="Warfram"><image class="WarframLog" src="../../gameImages/8.png"></image><view class="WarframText">Warfram</view></view>
+    <view class="Overwatch"><image class="OverwatchLog" src="../../gameImages/9.png"></image><view class="OverwatchText">Overwatch</view></view>
+  
+  </view>
+</view>
 <view class="RainbowSixPage" wx:if="{{HomePage==1}}">这是彩虹六号</view>
 <view class="PUBGPage" wx:if="{{HomePage==2}}">这是PUBG</view>
 <view class="PcGamePage" wx:if="{{HomePage==3}}">这是Pc</view>
